Update boot.sh